--- a/main.ipynb
+++ b/main.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports and Initializations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -20,25 +27,17 @@
     "lr = 5e-5                                           \n",
     "batch_size = 8\n",
     "warmup_steps= 750\n",
-    "save_loc1 = '/home/arjun/Documents/ModelSaves/GPT2Alpaca-chat'\n",
-    "save_loc2 = '/home/arjun/Documents/ModelSaves/GPT2AlpacaNew-chat'\n",
-    "save_loc3 = '/home/arjun/Documents/ModelSaves/GPT2Alpaca-midEpoch-chat'\n",
+    "save_loc = 'Your save location'\n",
     "\n",
     "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "print(device)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "dataset = load_dataset(\"MuskumPillerum/General-Knowledge\")\n",
-    "dataset = dataset['train']\n",
-    "\n",
-    "# Making dataset smaller for fast training\n",
-    "dataset"
+    "# Initialising model"
    ]
   },
   {
@@ -51,6 +50,23 @@
     "tokenizer = AutoTokenizer.from_pretrained('gpt2', bos_token='<|startoftext|>', eos_token='<|endoftext|>', pad_token='<|pad|>')\n",
     "\n",
     "optimizer = AdamW(model.parameters(), lr=lr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = load_dataset(\"MuskumPillerum/General-Knowledge\")\n",
+    "dataset = dataset['train']"
    ]
   },
   {
@@ -86,7 +102,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Optimizer and scheduler\n",
     "num_training_steps = num_epochs * len(dataloader)\n",
     "lr_scheduler = get_scheduler(name=\"linear\", optimizer=optimizer, num_warmup_steps=warmup_steps, num_training_steps=num_training_steps)\n",
     "model.resize_token_embeddings(len(tokenizer))\n",
@@ -96,12 +111,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training loop"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Training loop\n",
     "progress_bar = tqdm(range(num_training_steps-1), desc='Training', unit='steps')\n",
     "model.train()\n",
     "ep = 0\n",
@@ -136,31 +157,14 @@
     "    ep += 1\n",
     "    print('Epoch:', ep, 'Average training loss =', avg_train_loss)\n",
     "    if abs(prev_avg_train_loss - avg_train_loss) < 0.0001:\n",
-    "        model.save_pretrained(save_loc2)\n",
-    "        tokenizer.save_pretrained(save_loc2)\n",
+    "        model.save_pretrained(save_loc)\n",
+    "        tokenizer.save_pretrained(save_loc)\n",
     "        print(\"Loss is very small\")\n",
     "        break\n",
     "    prev_avg_train_loss = avg_train_loss\n",
-    "    model.save_pretrained(save_loc3)\n",
-    "    tokenizer.save_pretrained(save_loc3)\n"
+    "    model.save_pretrained(save_loc)\n",
+    "    tokenizer.save_pretrained(save_loc)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.save_pretrained(save_loc2)\n",
-    "tokenizer.save_pretrained(save_loc2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
